Bug 69539 - EDITING: Confusing naming of CONVERT and CONVERT_ADD functions
Summary: EDITING: Confusing naming of CONVERT and CONVERT_ADD functions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: BSA target:5.3.0 target:6.0.0
Keywords:
: 96570 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-18 18:20 UTC by John Smith
Modified: 2017-09-01 10:38 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Odt document containing a screenshot illustrating the error. (52.17 KB, application/vnd.oasis.opendocument.text)
2013-09-18 18:20 UTC, John Smith
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Smith 2013-09-18 18:20:44 UTC
Created attachment 86080 [details]
Odt document containing a screenshot illustrating the error.

Problem description: Using the CONVERT function always returns an error.

Steps to reproduce:
1. Open an instance of Calc
2. Open the Function Wizard and select the CONVERT function(NOT the CONVERT_ADD function).
3. Enter valid data for each of the required parameters in the correct format

Current behavior:The result can be seen as an error message in the dialogue box, or in the spreadsheet if the Enter button in the dialogue is pressed.

Expected behavior:Should convert the data in just the same way as CONVERT_ADD does.

Parameters for units of measure are taken from the Helpfile list for CONVERT_ADD. Measurement units from here
http://docs.oasis-open.org/office/v1.2/cs01/OpenDocument-v1.2-cs01-part2.html#CONVERT also tried.
Only the specific examples in the Help file appear to work.

              
Operating System: Windows XP
Version: 4.1.1.2 release
Comment 1 Julien Nabet 2013-11-30 18:18:44 UTC
Eike: I'm not sure when reading this thread http://nabble.documentfoundation.org/libreoffice-l10n-Test-CONVERT-function-td4065450.html, it's not a bug or something will be done about this soon so the CONVERT and CONVERT_ADD are less confusing?
Comment 2 Eike Rathke (retired, only occasionally showing up) 2013-12-02 10:44:50 UTC
I'll try (there might be quirks lurking) to do something about this, i.e. rename functions in the UI.

Note that CONVERT and CONVERT_ADD are completely different functions, only CONVERT_ADD implements the OpenFormula CONVERT.
Comment 3 raal 2015-12-17 22:05:25 UTC
*** Bug 96570 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2016-08-03 16:58:50 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ced79363cc30f225e766195ace4f892754fc85a0

Resolves: tdf#69539 UI rename CONVERT to CONVERT_OOO, CONVERT_ADD to CONVERT

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2017-09-01 10:38:13 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/help/commit/?id=5c2654302e9e4dcf45f802e8d31e53f55251c367

Rename Help CONVERT to CONVERT_OOO, CONVERT_ADD to CONVERT, tdf#69539