Resolves: tdf#69539 UI rename CONVERT to CONVERT_OOO, CONVERT_ADD to CONVERT

... with same syntax but different semantics that was even more confusing.

Change-Id: Ibe1efcd5c4e82c9ce8d9fe8ed0f85e86dac327f7